// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button states 1`] = `
.c0 {
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1rem;
  line-height: 1.5rem;
  padding: 0.375rem 1rem;
  background: #64518A;
  border: 0.0625rem solid #64518A;
  color: #FFFFFF;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c0[disabled]:hover,
.c0[disabled]:active,
.c0[disabled]:focus {
  background-color: #64518A;
}

.c0:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c0:hover,
.c0:focus,
.c0.hover {
  background: #473764;
  border-color: #473764;
}

.c0:active,
.c0.active {
  background: #2A1B60;
  border-color: #2A1B60;
  color: #FFFFFF;
}

<button
  className="c0"
>
  🥑
</button>
`;

exports[`Button variant transparent 1`] = `
.c0 {
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1rem;
  line-height: 1.5rem;
  padding: 0.375rem 1rem;
  background: transparent;
  border: 0.0625rem solid transparent;
  color: #64518A;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c0[disabled]:hover,
.c0[disabled]:active,
.c0[disabled]:focus {
  background-color: #64518A;
}

.c0:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c0:hover,
.c0:focus,
.c0.hover {
  background: transparent;
  border-color: transparent;
}

.c0:active,
.c0.active {
  background: #F1EBFF;
  border-color: transparent;
  color: inherit;
}

<button
  className="c0"
>
  🥑
</button>
`;
